--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
 @import url('../css/home.css');
 @import url('../css/catalog.css');
 @import url('../css/404.css');
+@import url('../css/register.css');
