--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,3 +2,4 @@
 @import url('../css/catalog.css');
 @import url('../css/404.css');
 @import url('../css/register.css');
+@import url('../css/login.css');
