--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,3 +3,4 @@
 @import url('../css/404.css');
 @import url('../css/register.css');
 @import url('../css/login.css');
+@import url('../css/create.css');
