--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,4 @@
 @import url('../css/register.css');
 @import url('../css/login.css');
 @import url('../css/create.css');
+@import url('../css/edit.css');
