--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,3 +5,4 @@
 @import url('../css/login.css');
 @import url('../css/create.css');
 @import url('../css/edit.css');
+@import url('../css/details.css');
