--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,4 @@
 @import url('../css/create.css');
 @import url('../css/edit.css');
 @import url('../css/details.css');
+@import url('../css/search.css');
