Make first setup
Install express, handlebars and nodemon. Linking home page

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Charity Christmas</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <!--For all users-->
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">Catalog</a></li>
                 <!--For loggin users-->
                 <li><a href="#">Create Toy</a></li>
@@ -28,12 +28,7 @@
 
         </nav>
 
-        <section id="homePage" class="background-img">
-            <div class="introduction">
-                <h1>Welcome to our Charity Shops</h1>
-                <p>Our online charity shops sell christmas toys for future Christmas. All money raised helps people in crisis in comunity and around the world.</p>
-            </div>
-        </section>
+        {{{body}}}
 
         <footer>@SoftUni - JS Back-end - Charity Christmas 2022</footer>
     </div>
