--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,14 +15,14 @@
             <ul>
                 <!--For all users-->
                 <li><a href="/">Home</a></li>
-                <li><a href="#">Catalog</a></li>
+                <li><a href="/toys/catalog">Catalog</a></li>
                 <!--For loggin users-->
-                <li><a href="#">Create Toy</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/toys/create-toy">Create Toy</a></li>
+                <li><a href="/toys/search">Search</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
                 <!--For guest user-->
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
 
             </ul>
 
