--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,9 +1,9 @@
 <section id="loginPage">
-    <form id='loginForm' method='post' action='/auth/login'>
+    <form id='loginForm' method='POST' action='/auth/login'>
         <label for="email">Email:</label>
-        <input type="text" id="email" name="" placeholder="Email">
+        <input type="text" id="email" name="email" placeholder="Email">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="" placeholder="Password">
+        <input type="password" id="password" name="password" placeholder="Password">
         <input type="submit" class="register" value="Login">
     </form>
 </section>
