Setup create functionality

--- a/src/public/css/create.css
+++ b/src/public/css/create.css
@@ -9,6 +9,7 @@
   padding-top: 1%;
   display: inline-block;
   margin-top: 2%;
+  margin-bottom: 4%;
   background: rgba(211, 28, 28, 0.677);
   width: 40%;
   border: 1px solid white;
