--- a/src/views/partials/toys-card.hbs
+++ b/src/views/partials/toys-card.hbs
@@ -1,5 +1,5 @@
 <a href="/toys/{{_id}}/details" class="added-toys-in-market">
     <img src="{{image}}" class="picture-added-toys">
     <h3>{{title}}</h3>
-    <span>Price: ${{price}}</span>
+    <span>Price: ${{price}}.00</span>
 </a>
